Added another Led Cube

--- a/index.html
+++ b/index.html
@@ -176,87 +176,109 @@
 
     <!-- PROJECTS -->
     <section id="projects" class="section projects-section">
-  <div class="container">
-    <h2>Projects</h2>
-    <p class="muted projects-subtitle">A list of my projects and contributions:</p>
+      <div class="container">
+        <h2>Projects</h2>
+        <p class="muted projects-subtitle">A list of my projects and contributions:</p>
 
-    <div class="projects-grid projects-grid-cards">
-      <!-- Card 1 -->
-      <article class="p-card">
-        <div class="p-media">
-          <img src="images/FPGA.jpeg" alt="4-bit ALU on FPGA preview" loading="lazy" decoding="async" />
+        <div class="projects-grid projects-grid-cards">
+          <!-- Card 1 -->
+          <article class="p-card">
+            <div class="p-media">
+              <img src="images/FPGA.jpeg" alt="4-bit ALU on FPGA preview" loading="lazy" decoding="async" />
+            </div>
+
+            <div class="p-panel">
+              <h3>4-Bit ALU Design and FPGA Implementation</h3>
+
+              <ul class="p-bullets">
+                <li>Built a modular 4-bit ALU in VHDL on a Nexys-3 FPGA.</li>
+                <li>Implemented add/sub/inc/dec and AND/OR/XOR/NOT.</li>
+                <li>Verified using a testbench and FPGA debugging.</li>
+              </ul>
+
+              <div class="p-tags">
+                <span>VHDL</span><span>FPGA</span><span>Digital Logic</span>
+              </div>
+
+              <div class="p-links"></div>
+            </div>
+          </article>
+
+          <!-- Card 2 -->
+          <article class="p-card">
+            <div class="p-media">
+              <img src="images/UMS.jpg" alt="University Management System preview" loading="lazy" decoding="async" />
+            </div>
+
+            <div class="p-panel">
+              <h3>University Management System</h3>
+
+              <ul class="p-bullets">
+                <li>Full-stack portal for enrollment, scheduling, and faculty assignment.</li>
+                <li>Built a JavaFX dashboard and designed a MySQL schema.</li>
+                <li>Focused on clean CRUD flows and data integrity.</li>
+              </ul>
+
+              <div class="p-tags">
+                <span>Java</span><span>JavaFX</span><span>MySQL</span>
+              </div>
+
+              <div class="p-links">
+                <!--<a class="p-link" href="#" target="_blank" rel="noopener noreferrer">GitHub</a>-->
+              </div>
+            </div>
+          </article>
+
+          <!-- Card 3 -->
+          <article class="p-card">
+            <div class="p-media">
+              <!-- Rename file to remove spaces, then update src -->
+              <img src="images/Aruino_Wheelchair _Prototype.jpeg" alt="Arduino wheelchair prototype preview" loading="lazy" decoding="async" />
+            </div>
+
+            <div class="p-panel">
+              <h3>Automated Arduino Wheelchair Prototype</h3>
+
+              <ul class="p-bullets">
+                <li>Built an autonomous prototype with sensor + motor control.</li>
+                <li>Improved stability using center-of-mass and tipping analysis.</li>
+                <li>Iterated mechanical layout in CAD.</li>
+              </ul>
+
+              <div class="p-tags">
+                <span>Arduino</span><span>C++</span><span>SolidWorks</span>
+              </div>
+
+              <div class="p-links"></div>
+            </div>
+          </article>
+
+          <!-- Card 4  -->
+          <article class="p-card">
+            <div class="p-media">
+              <img src="images/4x4x4_Led_Cube.jpg" alt="4×4×4 LED Cube (Arduino) preview" loading="lazy" decoding="async" />
+            </div>
+
+            <div class="p-panel">
+              <h3>4×4×4 LED Cube (Arduino)</h3>
+
+              <ul class="p-bullets">
+                <li>Hand-soldered 64 LEDs into a 4×4×4 grid and wired interconnects manually.</li>
+                <li>Designed and soldered a custom PCB for clean routing and reliable signal control.</li>
+                <li>Programmed an Arduino Nano using multiplexing for layer scanning and animations.</li>
+              </ul>
+
+              <div class="p-tags">
+                <span>Arduino Nano</span><span>Multiplexing</span><span>PCB</span><span>Logic ICs</span><span>Soldering</span>
+              </div>
+
+              <div class="p-links">
+              </div>
+            </div>
+          </article>
         </div>
-
-        <div class="p-panel">
-          <h3>4-Bit ALU Design and FPGA Implementation</h3>
-
-          <ul class="p-bullets">
-            <li>Built a modular 4-bit ALU in VHDL on a Nexys-3 FPGA.</li>
-            <li>Implemented add/sub/inc/dec and AND/OR/XOR/NOT.</li>
-            <li>Verified using a testbench and FPGA debugging.</li>
-          </ul>
-
-          <div class="p-tags">
-            <span>VHDL</span><span>FPGA</span><span>Digital Logic</span>
-          </div>
-
-          <div class="p-links">
-          </div>
-        </div>
-      </article>
-
-      <!-- Card 2 -->
-      <article class="p-card">
-        <div class="p-media">
-          <img src="images/UMS.jpg" alt="University Management System preview" loading="lazy" decoding="async" />
-        </div>
-
-        <div class="p-panel">
-          <h3>University Management System</h3>
-
-          <ul class="p-bullets">
-            <li>Full-stack portal for enrollment, scheduling, and faculty assignment.</li>
-            <li>Built a JavaFX dashboard and designed a MySQL schema.</li>
-            <li>Focused on clean CRUD flows and data integrity.</li>
-          </ul>
-
-          <div class="p-tags">
-            <span>Java</span><span>JavaFX</span><span>MySQL</span>
-          </div>
-
-          <div class="p-links">
-            <a class="p-link" href="#" target="_blank" rel="noopener noreferrer">GitHub</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Card 3 -->
-      <article class="p-card">
-        <div class="p-media">
-          <img src="images/Aruino_Wheelchair _Prototype.jpeg" alt="Arduino wheelchair prototype preview" loading="lazy" decoding="async" />
-        </div>
-
-        <div class="p-panel">
-          <h3>Automated Arduino Wheelchair Prototype</h3>
-
-          <ul class="p-bullets">
-            <li>Built an autonomous prototype with sensor + motor control.</li>
-            <li>Improved stability using center-of-mass and tipping analysis.</li>
-            <li>Iterated mechanical layout in CAD.</li>
-          </ul>
-
-          <div class="p-tags">
-            <span>Arduino</span><span>C++</span><span>SolidWorks</span>
-          </div>
-
-          <div class="p-links">
-          </div>
-        </div>
-      </article>
-    </div>
-  </div>
-</section>
-
+      </div>
+    </section>
 
     <!-- CONTACT -->
     <section id="contact" class="section">
